# fgff

./: Cargo.toml  README.md
sort_test/: minimal.agat.gff  minimal.gff  minimal.gff3sort.gff  minimal.gff3sort.pl  minimal.gffread.gff  minimal.gt.gff
src/: build.rs  build_cli.yaml  cli.yaml  common.rs  filter_cli.yaml  main.rs  tss_cli.yaml
