[package]
name = "gff-tools"
version = "0.1.0"
authors = ["Jan Forster <forster_jan@web.de>"]
edition = "2018"

[dependencies]
bio = "0.30"
rust-htslib = "0.26"
bio-types = "0.5"
clap = { version = "2.27", features = ["yaml", "color", "suggestions"]}
itertools = "0.6"
log = "0.4"
vec_map = "0.8"
fern = "0.5"
csv = "1"
serde = "1"
serde_derive = "1"
sha1 = "0.6"
hyper = "0.10"
flate2 = "0.2"
http = "0.1"
env_logger = "0.5"
bincode = "1"
