[package]
name = "gff-tools"
version = "0.1.0"
authors = ["Jan Forster <forster_jan@web.de>"]
edition = "2018"

[dependencies]
bio = "0.34"
rust-htslib = "0.36"
bio-types = "0.5"
clap = { version = "2.27", features = ["yaml", "color", "suggestions"]}
itertools = "0.6"
log = "0.4"
vec_map = "0.8"
fern = "0.5"
hyper = "0.10"
flate2 = "0.2"
http = "0.1"
env_logger = "0.5"
bincode = "1"
